# trade-executor

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  codecov.yml  entrypoint.sh  pyproject.toml
.github/workflows/: action.yml  poetry_action.yml
data/: schema.sql
tests/: test_process.py  test_trade.py  test_ws_client.py
trade_executor/: main.py  offer.py  process.py  rate.py  trade.py  trail.py  ws_client.py
trade_executor/helpers/: config.py  init_db.py  logger.py
