[tool.poetry]
name = "trade-executor"
version = "0.1.0"
description = ""
authors = ["Anna Wyporkiewicz <anna.wyporkiewicz@gmail.com>"]
readme = "README.md"
packages = [
    { include = "trade_executor", from = "." },
]


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
asyncio = "^3.4.3"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
